# asr-thesis-project

./: .gitignore  pyproject.toml
configs/: config.yaml
configs/data/: test_dataloader.yaml  test_function.yaml
configs/dataset/: librispeech.yaml  speech2latex.yaml  test_dataset.yaml
configs/model/: custom_ctc_model.yaml  wav2vec2.yaml  whisper_base.yaml  whisper_tiny.yaml
notebooks/: preprocess_dataset.ipynb  speech2latex_eda.ipynb
outputs/2026-06-27/21-02-20/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-27/21-02-41/.hydra/: hydra.yaml
outputs/2026-06-27/21-04-54/.hydra/: hydra.yaml
outputs/2026-06-27/21-06-34/.hydra/: hydra.yaml
outputs/2026-06-27/21-07-25/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-27/21-07-50/.hydra/: hydra.yaml
outputs/2026-06-27/21-12-38/.hydra/: hydra.yaml
outputs/2026-06-27/21-13-01/.hydra/: hydra.yaml
outputs/2026-06-27/21-13-22/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-27/21-18-30/.hydra/: hydra.yaml
outputs/2026-06-27/21-20-18/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-27/21-22-29/.hydra/: config.yaml  hydra.yaml
outputs/2026-06-27/21-24-50/.hydra/: hydra.yaml
outputs/2026-06-27/21-25-23/.hydra/: config.yaml  (+1 more)
src/: main.py  train.py
src/data/: data_collator.py  dataset_collection.py  preprocess.py  test_dataset.py  video_collection.py
src/data/educational_dataset/: preprocess.py  url_collection.py  video_collection.py
src/metrics/: asr_metric.py
src/models/: custom_ctc_model.py  whisper.py
src/utils/: logger.py
tests/: test_collate.py  test_metric.py  test_preprocess.py
(+1 files in other folders)
