[project]
name = "asr-thesis-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets[audio]>=5.0.0",
    "evaluate>=0.4.6",
    "hydra-core>=1.3.3",
    "jiwer>=4.0.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "torch>=2.11.0",
    "torchcodec>=0.14.0",
    "torchvision>=0.26.0",
    "transformers[torch]>=5.12.1",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp[default]>=2026.7.4",
]

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }
torchcodec = { index = "pytorch-cu126" }

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]


